# cosense

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: main.rs
src/cs/commands/: get_code.rs  get_icon.rs  get_links.rs  get_page_json.rs  get_pages.rs  get_pages_json.rs  get_search_json.rs  get_table.rs  mod.rs  search.rs  view_page.rs  view_page_on_web.rs
src/cs/models/: page.rs  page_in_project.rs  pages.rs  query.rs  related_page.rs  related_pages.rs  search_result.rs  user.rs
src/cs/utils/: get_config_path.rs  get_current_project.rs  load_config.rs  save_config.rs  set_current_project.rs
src/makesense/: mod.rs
src/makesense/commands/: create.rs  get_code.rs  get_icon.rs  get_page_json.rs  get_pages.rs  get_pages_json.rs  get_project_json.rs  get_search_json.rs  get_table.rs  mod.rs  search.rs  search_on_web.rs  view_page.rs  view_page_on_web.rs  view_project_on_web.rs
src/makesense/models/: line.rs  mod.rs  page.rs  page_in_project.rs  page_in_search_result.rs  pages.rs  related_pages.rs  search_result.rs
src/makesense/utils/: config.rs  get_config_path.rs  get_current_project.rs  load_config.rs  mod.rs  save_config.rs  set_current_project.rs
