[package]
name = "mks"
version = "0.1.4"
edition = "2021"
authors = ["Kawakami Moeki <hi@.moeki.org>"]
description = "A tool for interacting with Cosense API"
license = "MIT"
repository = "https://github.com/kawakamimoeki/makesense"
keywords = ["cosense", "api", "tool"]
categories = ["command-line-utilities", "network-programming"]
readme = "README.md"
homepage = "https://github.com/kawakamimoeki/makesense"
documentation = "https://github.com/kawakamimoeki/makesense"

[dependencies]
clap = { version = "4.5.19", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
webbrowser = "1.0"
serde_json = "1.0"
dirs = "4.0"
